namespace Failsafe.Scripts.Character.Components.AnimatorComponents
{
    public class CharacterAnimatorHash
    {
        public readonly int MoveHeightHash = UnityEngine.Animator.StringToHash("MoveHeight");
        public readonly int ForwardInputHash = UnityEngine.Animator.StringToHash("ForwardInput");
        public readonly int SideInputHash = UnityEngine.Animator.StringToHash("SideInput");
        public readonly int RotateMagnitude = UnityEngine.Animator.StringToHash("RotateMagnitude");
    }
}