namespace Failsafe.Scripts.Character.Components.AnimatorComponents
{
    public class CharacterAnimatorParameters
    {
        public readonly int MoveHeight = UnityEngine.Animator.StringToHash("MoveHeight");
        public readonly int ForwardInput = UnityEngine.Animator.StringToHash("ForwardInput");
        public readonly int SideInput = UnityEngine.Animator.StringToHash("SideInput");
    }
}